@@ -21,26 +21,32 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import org.hyperledger.besu.datatypes.Hash;
+import org.hyperledger.besu.datatypes.VersionedHash;
 import org.hyperledger.besu.evm.EVM;
 import org.hyperledger.besu.evm.frame.MessageFrame;
+import org.hyperledger.besu.evm.gascalculator.CancunGasCalculator;
 import org.hyperledger.besu.evm.gascalculator.LondonGasCalculator;
 import org.hyperledger.besu.evm.operation.DataHashOperation;
 import org.hyperledger.besu.evm.operation.Operation;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 import org.apache.tuweni.bytes.Bytes;
+import org.apache.tuweni.bytes.Bytes32;
 import org.junit.jupiter.api.Test;
 
 class DataHashOperationTest {
 
+  private static final String testVersionedHash =
+      "0x01cafebabeb0b0facedeadbeefbeef0001cafebabeb0b0facedeadbeefbeef00";
+
   @Test
   void putsHashOnStack() {
-    Hash version0Hash = Hash.fromHexStringLenient("0xcafebabeb0b0facedeadbeef");
-    List<Hash> versionedHashes = List.of(version0Hash);
+    VersionedHash version0Hash = new VersionedHash(Bytes32.fromHexStringStrict(testVersionedHash));
+    List<VersionedHash> versionedHashes = Arrays.asList(version0Hash);
     DataHashOperation getHash = new DataHashOperation(new LondonGasCalculator());
     MessageFrame frame = mock(MessageFrame.class);
     when(frame.popStackItem()).thenReturn(Bytes.of(0));
@@ -49,7 +55,7 @@ class DataHashOperationTest {
     Operation.OperationResult r = getHash.execute(frame, fakeEVM);
     assertThat(r.getGasCost()).isEqualTo(3);
     assertThat(r.getHaltReason()).isNull();
-    verify(frame).pushStackItem(version0Hash);
+    verify(frame).pushStackItem(version0Hash.toBytes());
   }
 
   @Test
@@ -57,7 +63,7 @@ class DataHashOperationTest {
 
     EVM fakeEVM = mock(EVM.class);
 
-    DataHashOperation getHash = new DataHashOperation(new LondonGasCalculator());
+    DataHashOperation getHash = new DataHashOperation(new CancunGasCalculator());
     MessageFrame frame = mock(MessageFrame.class);
     when(frame.popStackItem()).thenReturn(Bytes.of(0));
     when(frame.getVersionedHashes()).thenReturn(Optional.empty());
@@ -76,11 +82,26 @@ class DataHashOperationTest {
 
   @Test
   void pushZeroOnVersionIndexOutOFBounds() {
-    Hash version0Hash = Hash.fromHexStringLenient("0xcafebabeb0b0facedeadbeef");
-    List<Hash> versionedHashes = List.of(version0Hash);
-    DataHashOperation getHash = new DataHashOperation(new LondonGasCalculator());
+    VersionedHash version0Hash = new VersionedHash(Bytes32.fromHexStringStrict(testVersionedHash));
+    List<VersionedHash> versionedHashes = Arrays.asList(version0Hash);
+    DataHashOperation getHash = new DataHashOperation(new CancunGasCalculator());
     MessageFrame frame = mock(MessageFrame.class);
     when(frame.popStackItem()).thenReturn(Bytes.of(1));
+    when(frame.getVersionedHashes()).thenReturn(Optional.of(versionedHashes));
+    EVM fakeEVM = mock(EVM.class);
+    Operation.OperationResult r = getHash.execute(frame, fakeEVM);
+    assertThat(r.getGasCost()).isEqualTo(3);
+    assertThat(r.getHaltReason()).isNull();
+    verify(frame).pushStackItem(Bytes.EMPTY);
+  }
+
+  @Test
+  public void pushZeroWhenPopsMissingUint256SizedIndex() {
+    VersionedHash version0Hash = new VersionedHash(Bytes32.fromHexStringStrict(testVersionedHash));
+    List<VersionedHash> versionedHashes = Arrays.asList(version0Hash);
+    DataHashOperation getHash = new DataHashOperation(new CancunGasCalculator());
+    MessageFrame frame = mock(MessageFrame.class);
+    when(frame.popStackItem()).thenReturn(Bytes32.repeat((byte) 0x2C));
     when(frame.getVersionedHashes()).thenReturn(Optional.of(versionedHashes));
     EVM fakeEVM = mock(EVM.class);
     Operation.OperationResult r = getHash.execute(frame, fakeEVM);
